FIX: used webaim to find a correct contrast, and applied

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -8,11 +8,11 @@
     /* colors generated by adobe colour wheel */
     --primary-color: #9dc6e0;
     /* light blue */
-    --secondary-color: #0477bf;
+    --secondary-color: #035487;
     /* blue */
     --highlight-color: #1bb5f1;
     /* blue */
-    --light-highlight-color: #d6e6f1;
+    --light-highlight-color: #EDF3F7;
     /* cloud white-blue */
     --black-color: #031d35;
     /* blue-black */
@@ -57,6 +57,7 @@ h3 {
 }
 
 .nav-item .active {
+    color: var(--light-highlight-color) !important;
     font-weight: bold;
 }
 
